2010-06-29  Patrice Dumas  <pertusus@free.fr>

	delay config file message after daemonization
	report from Benoit-Pierre Demaine.

2010-05-30  Patrice Dumas  <pertusus@free.fr>

	Really iterate over the str_list
	regression inserted in 72822c382d3ef426fc7ecf1104556066b5ff63f3

2010-05-30  Patrice Dumas  <pertusus@free.fr>

	initialize and check NULL (Marcin Gryszkalis report)

2010-03-23  Patrice Dumas  <pertusus@free.fr>

	Debug option prints the hal callbacks

2010-03-23  Patrice Dumas  <pertusus@free.fr>

	Resolve parents for exec properties, too

2010-03-23  Patrice Dumas  <pertusus@free.fr>

	add undocumented debug option showing configuration

2010-02-18  Patrice Dumas  <pertusus@free.fr>

	Release 0.1.6.

2010-02-18  Patrice Dumas  <pertusus@free.fr>

	add scripts easying git log to ChangeLog change.
	gitlog-to-changelog comes from gnulib.
	Use git-revert to add ChangeLog change.
	Add user and group name to ./configure --help.

2010-02-15  Daniel Mierswa  <impulze@impulze.org>

	Build system cleanup.
	Convenience "fixes":
	  use HALEVT_PIDDIR instead of lowercase
	  use HALEVT_DEFAULT_GROUP/USER

	Also do not pass piddir as preprocessor macros but rather define them in
	the config.h file (just as the USER_NAME/GROUP_NAME was).

	Use LN_S and RM instead of ln -s and rm -f.
2010-02-14 Patrice Dumas <pertusus@free.fr>

	* configure.ac, doc/*: use HALEVT_USER and HALEVT_GROUP instead
	of USER and GROUP.
	change to halevt-mount man page from Dominik Schemmel report.
	Document that no uid= mount option is used when user is halevt.

2010-02-14  Daniel Mierswa  <impulze@impulze.org>

	use calloc instead explicit instantiation
	halevt_get_iterator_value:
	  use calloc instead of explicitly initializing members to NULL after
	  successful allocation

	fix illegal free
	halevt_get_iterator_value:
	halevt_get_property_value:
	  if we don't set the first array member (see default case and/or if
	  libhal returns a NULL pointer), then it will be left unitialized