@@ -1,3 +1,8 @@
+2010-07-05  Patrice Dumas  <pertusus@free.fr>
+
+	Fix bashisms in hvmount, patch from Marcos Talau.
+
+
 2010-06-29  Patrice Dumas  <pertusus@free.fr>
 
 	delay config file message after daemonization
